Upgrades; Junit 5.13, Lombok 1.18.40, Spring Boot 3.5.5, Gradle 9.1.0-RC3, ...